hphp/test/slow/nullsafe/nullsafe-prop-13.php
<?hh // strict

function byRef(inout $x) {}

function test() {
  $x = null;
  byRef(inout $x?->y); // error
}
